--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/Clairefollett/basepaws/issues"
   },
-  "homepage": "https://github.com/Clairefollett/basepaws#readme"
+  "homepage": "https://github.com/Clairefollett/basepaws#readme",
+  "dependencies": {
+    "ejs": "^2.5.7",
+    "express": "^4.15.4"
+  }
 }
